# tokio-agent

./: .gitignore  Cargo.toml  LICENSE  PERMISSIONS_EXTENSION_DEVELOPMENT_PLAN.md  README.md  extension-system-design.md  goal-loop-analysis.md
.github/workflows/: ci.yml  registry.yml
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  oauth.rs  pkce.rs  server.rs  store.rs  token.rs
crates/cli/: Cargo.toml
crates/cli/src/: default_system_prompt.md  extension_runtime.rs  headless.rs  main.rs  session.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  autonomy.rs  context.rs  event.rs  lib.rs  message.rs  permission.rs  provider.rs  sleep.rs  tool.rs  tool_execution.rs
crates/core/tests/: context_prefix.rs  frontend_channel.rs  malformed_args.rs  roundtrip.rs
crates/extension-api/: Cargo.toml
crates/extension-api/src/: lib.rs
crates/extension-api/tests/: protocol.rs
crates/extension-host/: Cargo.toml
crates/extension-host/runtime/: js-runtime.component.wasm
crates/extension-host/src/: main.rs
crates/extension-host/tests/: isolation.rs
crates/extension-host/wit/: extension.wit
crates/extension-runtime/: Cargo.toml  README.md
crates/extension-runtime/src/: api.js  lib.rs
crates/mcp/: Cargo.toml
crates/plugin/: Cargo.toml  official-root.json
crates/plugin/src/: catalog.rs  commands.rs  companion.rs  config.rs  lib.rs  lockfile.rs  manifest.rs  prompt.rs  registry.rs  reload.rs  runtime.rs  store.rs  supervisor.rs  trust.rs  tuf.rs  user_state.rs
crates/plugin/tests/: extension_system.rs
crates/provider/: Cargo.toml
crates/provider/fixtures/anthropic/: signed_thinking_tool_use.sse
crates/provider/fixtures/openai/: tool_call.sse
crates/provider/src/: anthropic.rs  conformance.rs  deepseek.rs  lib.rs  openai.rs  sse.rs  transport.rs
crates/provider/tests/: conformance.rs
crates/registry-tool/: Cargo.toml
crates/registry-tool/src/: main.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  edit.rs  fs.rs  glob.rs  grep.rs  lib.rs  multi_edit.rs  read.rs  web_search.rs  write.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  composer.rs  input.rs  lib.rs  markdown.rs  projection.rs  provider_setup.rs  theme.rs  transcript.rs
registry/extensions/: LOCAL_DEV.md  README.md  package-lock.json  package.json  tokio-extension.d.ts  tsconfig.base.json
registry/extensions/goal/: Cargo.toml  LICENSE  README.md  extension.toml
registry/extensions/goal/src/: extension.ts  lib.rs
registry/extensions/loop/: Cargo.toml  README.md  extension.toml
registry/extensions/loop/src/: extension.ts  lib.rs
registry/extensions/permissions/: Cargo.toml  README.md  extension.toml  tsconfig.json
registry/extensions/permissions/src/: extension.ts  lib.rs
wit/: extension.wit
