[package]
name = "tokio-agent-auth"
description = "ChatGPT subscription (OAuth) and API-key authentication for OpenAI providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
