[package]
name = "tokio-agent"
description = "tokio-agent — a fast, provider-agnostic terminal coding agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio-agent-core.workspace = true
tokio-agent-provider.workspace = true
tokio-agent-tools.workspace = true
tokio-agent-tui.workspace = true
tokio-agent-config.workspace = true
tokio-agent-mcp.workspace = true
tokio-agent-plugin.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
