[package]
name = "tokio-agent-config"
description = "Settings layers, profiles, permission rules, keychain access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
dirs.workspace = true

[lints]
workspace = true
