[package]
name = "tokio-agent-extension-host"
description = "Sandboxed WebAssembly component companion for tokio-agent extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio-agent-extension-api.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
