[package]
name = "tokio-agent-plugin"
description = "Extension loader: skills, plugins, custom commands (v1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio-agent-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
