[package]
name = "tokio-agent-tui"
description = "ratatui frontend: streaming markdown, diff viewer, input editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio-agent-core.workspace = true
tokio-agent-extension-api.workspace = true
tokio-agent-config.workspace = true
tokio-agent-auth.workspace = true
tokio-util.workspace = true
ratatui.workspace = true
crossterm.workspace = true
terminal-colorsaurus.workspace = true
pulldown-cmark.workspace = true
syntect.workspace = true
two-face.workspace = true
similar.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
tokio.workspace = true
tracing.workspace = true
base64.workspace = true
dirs.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
