[package]
name = "tokio-permissions"
version = "1.0.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio-agent-extension-api = { path = "../../../crates/extension-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wit-bindgen = "0.46"

[workspace]
